# durak

./: .clang-format  .gitignore  CMakeLists.txt  durak.qrc
cmake/: proj.cmake
src/: clearlayout.hpp  font.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  overloads.hpp
src/game/: card_throw_result.hpp  cardwaitresultmarker.hpp  defenceresultmarker.hpp  gamecontroller.cpp  gamecontroller.hpp  playerbuffer.cpp  playerbuffer.hpp  playertype.hpp  presets.hpp  waitresult.hpp
src/game/cards/: card.cpp  card.hpp  cardhash.cpp  cardhash.hpp  cardsuit.hpp
src/game/fsm/: action.hpp  event.hpp  fsm.cpp  fsm.hpp  state.cpp  state.hpp
src/game/player/: player.cpp  player.hpp  playerAI.cpp  playerAI.hpp  playerHuman.cpp  playerHuman.hpp
src/pages/: gamepage.cpp  gamepage.hpp  gamepage.ui  winpage.cpp  winpage.hpp  winpage.ui
src/widgets/cardwidget/: cardwidget.cpp  cardwidget.hpp  cardwidget.ui  clickablecardwidget.cpp  clickablecardwidget.hpp  deckcardwidget.hpp  deckcardwidget.ui
src/widgets/deckwidget/: deckwidget.cpp  deckwidget.hpp  deckwidget.ui
src/widgets/playerwidget/: aiplayerwidget.cpp  aiplayerwidget.hpp  aiplayerwidget.ui  hostplayerwidget.cpp  hostplayerwidget.hpp  hostplayerwidget.ui  playerwidget.hpp
